<resources>
    <string name="app_name">PracticaPracticaA</string>
    <string name="fondo_de_bienvenida">Fondo de bienvenida</string>
    <string name="the_corner_of_patricia">The Corner of Patricia</string>
    <string name="imagen_de_fondo">Imagen de fondo</string>
    <string name="disfruta_de_las_mejores_recetas_seleccionadas_para_ti">Disfruta de las mejores recetas seleccionadas para ti</string>
    <string name="registrarse">Registrarse</string>
    <string name="loguearse">Loguearse</string>
    <string name="registrar">Registrar</string>
    <string name="ingrese_su_nombre">Ingrese su nombre...</string>
    <string name="ingrese_sus_apellidos">Ingrese sus apellidos...</string>
    <string name="ingrese_su_nombre_de_usuario">Ingrese su nombre de usuario...</string>
    <string name="ingrese_su_numero_de_telefono">Ingrese su numero de telefono...</string>
    <string name="ingrese_su_email">Ingrese su email...</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña...</string>
    <string name="estas_registrado">¿Estas registrado?</string>
    <string name="logueate_aqu">Logueate aquí</string>
    <string name="ingresar">Ingresar</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="log_in">Log In</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate_aqu">Registrate aquí</string>
    <string name="inicio">Inicio</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_de_la_receta">Nombre de la receta</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="preparaci_n">Preparación</string>
    <string name="pasos_de_la_prepraci_n">Pasos de la prepración</string>
    <string name="video_de_preparaci_n">Video de preparación</string>
    <string name="ingrediente">Ingrediente</string>
    <string name="medida">Medida</string>
    <string name="ok">OK</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="restablecer_contrase_a">Restablecer Contraseña</string>
    <string name="cambiar_contase_a">Cambiar Contraseña</string>
    <string name="nombre_apellido">Nombre Apellido</string>
    <string name="cooreo_ejemplo_com">cooreo@ejemplo.com</string>
    <string name="_999888777">999888777</string>
    <string name="actualizar_informaci_n">Actualizar Información</string>
    <string name="actualizar">Actualizar</string>
    <string name="nombre">Nombre...</string>
    <string name="apellidos">Apellidos...</string>
    <string name="nombre_de_usuario">Nombre de usuario...</string>
    <string name="telefono">Telefono...</string>
    <string name="email">Email...</string>
    <string name="editar">Editar</string>
    <string name="registrese_aqu">Registrese Aquí</string>
    <string name="Favoritos">Favoritos\n</string>
</resources>