<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumGray"
    tools:context=".ui.activity.DetalleRecetaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/back_ios_new_24"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/textViewRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_de_la_receta"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageViewRecipe"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                app:riv_corner_radius="24dp"
                android:contentDescription="@string/imagen_de_fondo" />

            <TextView
                android:id="@+id/textViewIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredientes"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preparaci_n"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPreparation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pasos_de_la_prepraci_n"
                android:textColor="@color/white"
                android:padding="8dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_de_preparaci_n"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>